test/golden96/hello } world.5295037443422799539.golden
INITIALPATH:7:28: error:
    • 
unexpected '}'
expecting "{{", "}}", "{" or end of input
    • In the quasi-quotation: [fmt|hello } world|]
  |
7 | main = putStrLn [fmt|hello } world|]
  |                            ^